added the creation of package diagrams