@@ -11,16 +11,21 @@ public class Client {
 	public static void main(String[] args) {
 
 		DiagramControllerFactory diagramControllerFactory = new DiagramControllerFactory();
-
+		/*
 		DiagramController classDiagramController = diagramControllerFactory.getController("Class");
 		classDiagramController.createTree(args[0]);
-		classDiagramController.convertTreeToDiagram(Arrays.asList("Command", "EditCommand", "CreateCommand", "CommandFactory"));
+		classDiagramController.convertTreeToDiagram(Arrays.asList("Command", "EditCommand", "CreateCommand", "CommandFactory", "LatexEditorController", "CommandFactory"));
+		classDiagramController.arrangeDiagram();
 		classDiagramController.exportDiagramToGraphML(args[2]);
+
+		*/
 
 		DiagramController packageDiagramController = diagramControllerFactory.getController("Package");
 		packageDiagramController.createTree(args[0]);
-		packageDiagramController.convertTreeToDiagram(List.of(args[1]));
+		packageDiagramController.convertTreeToDiagram(Arrays.asList("model", "controller"));
+		packageDiagramController.arrangeDiagram();
 		packageDiagramController.exportDiagramToGraphML(args[2]);
+
 	}
 
 }
